@@ -4410,6 +4410,17 @@ Additional benchmarks:
 
 				'APT Mirror')
 
+					# Jessie ARMv8: https://github.com/MichaIng/DietPi/issues/2665#issuecomment-477348864
+					if (( $G_HW_ARCH == 3 && $G_DISTRO < 4 )); then
+
+						G_WHIP_MSG '[INFO] Debian has dropped the Jessie ARMv8 branch from the official APT repository.\n
+Related packages are now available only from the archive: http://archive.debian.org/debian/\n
+This has been applied to your APT sources.list during DietPi update to v6.23 and it cannot be changed.\n
+Aborting...'
+						return
+
+					fi
+
 					# Create Menu List for Whiptail
 					G_WHIP_MENU_ARRAY=('Custom' ': Manually enter APT mirror')
 
