@@ -106,8 +106,13 @@ $FP_SCRIPT	setpermissions		Applies required filesystem permissions to DietPi spe
 
 		if [[ $INPUT_MODE_VALUE ]]; then
 
+			# - Jessie ARMv8: https://github.com/MichaIng/DietPi/issues/2665#issuecomment-477348864
+			if (( $G_HW_ARCH == 3 && $G_DISTRO < 4 )); then
+
+				INPUT_MODE_VALUE='http://archive.debian.org/debian/'
+
 			# - Set defaults?
-			if [[ $INPUT_MODE_VALUE == 'default' ]]; then
+			elif [[ $INPUT_MODE_VALUE == 'default' ]]; then
 
 				if (( $G_HW_MODEL < 10 )); then
 
@@ -121,17 +126,16 @@ $FP_SCRIPT	setpermissions		Applies required filesystem permissions to DietPi spe
 
 			fi
 
-			# - Set raspbian
+			# - Set Raspbian
 			if (( $G_HW_MODEL < 10 )); then
 
 				echo "deb $INPUT_MODE_VALUE $G_DISTRO_NAME main contrib non-free rpi" > /etc/apt/sources.list
-
 				echo "deb https://archive.raspberrypi.org/debian/ $G_DISTRO_NAME main ui" > /etc/apt/sources.list.d/raspi.list
 
 				#	Update dietpi.txt entry
 				G_CONFIG_INJECT 'CONFIG_APT_RASPBIAN_MIRROR=' "CONFIG_APT_RASPBIAN_MIRROR=$INPUT_MODE_VALUE" /DietPi/dietpi.txt
 
-			# - Set debian
+			# - Set Debian
 			else
 
 				cat << _EOF_ > /etc/apt/sources.list
@@ -141,13 +145,10 @@ deb https://deb.debian.org/debian-security/ $G_DISTRO_NAME/updates main contrib 
 deb $INPUT_MODE_VALUE $G_DISTRO_NAME-backports main contrib non-free
 _EOF_
 
-				#	Jessie, switch deb.debian.org to http: https://github.com/MichaIng/DietPi/issues/1285#issuecomment-351830101
+				#	Jessie: https://github.com/MichaIng/DietPi/issues/2665#issuecomment-477348864
 				if (( $G_DISTRO < 4 )); then
 
-					sed -i 's/https:/http:/g' /etc/apt/sources.list
-
-					# - ARM64 packages no longer available: https://github.com/MichaIng/DietPi/issues/1915
-					(( $G_HW_ARCH == 3 )) && sed -i '/debian-security/d' /etc/apt/sources.list
+					echo "deb $INPUT_MODE_VALUE $G_DISTRO_NAME main contrib non-free" > /etc/apt/sources.list
 
 				#	Buster, remove backports: https://github.com/MichaIng/DietPi/issues/1285#issuecomment-351830101
 				elif (( $G_DISTRO > 4 )); then
