@@ -74,6 +74,7 @@
 		#-------------------------------------------------------------------------------
 		# Pre-patch 4: https://github.com/MichaIng/DietPi/issues/2656
 		# Pre-patch 5: Add new G_CHECK_URL dietpi.txt settings
+		# Pre-patch 6: https://github.com/MichaIng/DietPi/pull/2728
 		if (( $G_DIETPI_VERSION_SUB < 23 )); then
 
 			if [[ -f '/etc/apt/preferences.d/dietpi-wireguard' ]]; then
@@ -86,6 +87,21 @@ Package: wireguard wireguard-dkms wireguard-tools\nPin: release n=sid\nPin-Prior
 
 			grep -q 'CONFIG_G_CHECK_URL_TIMEOUT' /DietPi/dietpi.txt || echo 'CONFIG_G_CHECK_URL_TIMEOUT=5' >> /DietPi/dietpi.txt || { EXIT_CODE=5; break; }
 			grep -q 'CONFIG_G_CHECK_URL_ATTEMPTS' /DietPi/dietpi.txt || echo 'CONFIG_G_CHECK_URL_ATTEMPTS=3' >> /DietPi/dietpi.txt || { EXIT_CODE=5; break; }
+
+			if (( $(sed -n 1p /DietPi/dietpi/.hw_model) > 9 )) && grep -qi 'jessie' /etc/os-release; then
+
+				echo -e '\e[90m[\e[0m INFO \e[90m]\e[0m Pre-patch 6 | Applying changes to APT sources.list since Debian dropped support for Jessie systems'
+				if [[ $(uname -m) == 'aarch64' ]]; then
+
+					echo 'deb http://archive.debian.org/debian/ main contrib non-free' > /etc/apt/sources.list || { EXIT_CODE=6; break; }
+
+				else
+
+					sed -Ei '/(debian-security|jessie-backports|jessie-updates)/d' /etc/apt/sources.list || { EXIT_CODE=6; break; }
+
+				fi
+
+			fi
 
 		fi
 		#-------------------------------------------------------------------------------
